crates/ruff_linter/src/rules/isort/snapshots/ruff_linter__rules__isort__tests__add_newline_before_comments.py.snap
---
source: crates/ruff_linter/src/rules/isort/mod.rs
---
I001 [*] Import block is un-sorted or un-formatted
 --> add_newline_before_comments.py:1:1
  |
1 | / import os
2 | | # This is a comment in the same section, so we need to add one newline.
3 | | import sys
4 | | import numpy as np
5 | | # This is a comment, but it starts a new section, so we don't need to add a newline
6 | | # before it.
7 | | import leading_prefix
  | |_____________________^
help: Organize imports
   |
 1 + import os
 2 + 
 3 + # This is a comment in the same section, so we need to add one newline.
 4 + import sys
 5 + 
 6 + import numpy as np
 7 + 
 8 + # This is a comment, but it starts a new section, so we don't need to add a newline
 9 + # before it.
10 + import leading_prefix
   |
