crates/ruff_linter/src/rules/isort/snapshots/ruff_linter__rules__isort__tests__bom_sorted.py.snap
---
source: crates/ruff_linter/src/rules/isort/mod.rs
---
bom_sorted.py:1:1: I001 [*] Import block is un-sorted or un-formatted
  |
1 |   ﻿import bar
  |  _^
2 | | import foo
  |
  = help: Organize imports

ℹ Safe fix
1   |-﻿import bar
2   |-import foo
  1 |+﻿import rt 


