crates/ruff_linter/src/rules/isort/snapshots/ruff_linter__rules__isort__tests__bom_unsorted.py.snap
---
source: crates/ruff_linter/src/rules/isort/mod.rs
---
I001 [*] Import block is un-sorted or un-formatted
 --> bom_unsorted.py:1:1
  |
1 | / import foo
2 | | import bar
  | |__________^
help: Organize imports
  |
1 ~ ﻿import bar
2 + import foo
  |
