crates/ruff_linter/src/rules/isort/snapshots/ruff_linter__rules__isort__tests__case_sensitive_case_sensitive.py.snap
---
source: crates/ruff_linter/src/rules/isort/mod.rs
---
I001 [*] Import block is un-sorted or un-formatted
 --> case_sensitive.py:1:1
  |
1 | / import A
2 | | import B
3 | | import b
4 | | import C
5 | | import d
6 | | import E
7 | | import f
8 | | from g import a, B, c
9 | | from h import A, b, C
  | |_____________________^
help: Organize imports
  |
1 + import A
2 + import B
3 + import C
4 + import E
5 + import b
6 + import d
7 + import f
8 + from g import B, a, c
9 + from h import A, C, b
  |
