crates/ruff_linter/src/rules/isort/snapshots/ruff_linter__rules__isort__tests__combine_as_imports.py.snap
---
source: crates/ruff_linter/src/rules/isort/mod.rs
---
I001 [*] Import block is un-sorted or un-formatted
 --> combine_as_imports.py:1:1
  |
1 | / from module import Class as C
2 | | from module import CONSTANT
3 | | from module import function
4 | | from module import function as f
  | |________________________________^
help: Organize imports
  |
1 + from module import CONSTANT, function
2 + from module import Class as C
3 + from module import function as f
  |
