crates/ruff_linter/src/rules/isort/snapshots/ruff_linter__rules__isort__tests__combined_required_imports_docstring.py.snap
---
source: crates/ruff_linter/src/rules/isort/mod.rs
---
docstring.py:1:1: I002 (missing-required-import) [*] Missing required import: `from __future__ import annotations`
ℹ Safe fix
1 1 | """Hello, world!"""
  2 |+from __future__ import annotations
2 3 | 
3 4 | x = 1

docstring.py:1:1: I002 (missing-required-import) [*] Missing required import: `from __future__ import generator_stop`
ℹ Safe fix
1 1 | """Hello, world!"""
  2 |+from __future__ import generator_stop
2 3 | 
3 4 | x = 1
